These methods and members have been changed from private to protected:

dk.itu.mario.engine.MarioComponent:
	randomLevel
	graphicsConfiguration
	sound
	scene
	
dk.itu.mario.engine.DataRecorder:
	level
	deaths
	kills
	

	
	
the following lines were commented:


dk.itu.mario.scene.LevelScene:
	line 488