@@ -1,13 +1,18 @@
-package es.diz.mario.engine;
+package es.diz.mario.game;
 
+import dk.itu.mario.engine.Art;
 import dk.itu.mario.engine.MarioComponent;
 import dk.itu.mario.engine.sprites.Mario;
+import dk.itu.mario.scene.LevelScene;
+import dk.itu.mario.scene.LoseScene;
 import es.diz.mario.scene.PlayerLevelSceneTest;
+import es.diz.mario.scene.PlayerWinScene;
 
 public class PlayerMarioComponent extends MarioComponent {
 	
 	private static final long serialVersionUID = 1L;
 	protected String playerName;
+	protected Thread thread;
 
 	public PlayerMarioComponent(String playerName) {
 		super(640, 480, false);
@@ -35,5 +40,25 @@ public class PlayerMarioComponent extends MarioComponent {
     	scene = randomLevel;
    
     }
+    
+    public void reset() {
+        PlayerPlay.reset();
+    }
+    
+    public void lose(){
+        scene = new LoseScene();
+        scene.setSound(sound);
+        scene.init();
+    }
+
+    public void win(){
+        scene = new PlayerWinScene(this);
+        scene.setSound(sound);
+        scene.init();
+    }
+
+    
+    
+    
 
 }
