@@ -5,12 +5,19 @@ dk.itu.mario.engine.MarioComponent:
 	graphicsConfiguration
 	sound
 	scene
+	openTime
+	running
 	
 dk.itu.mario.engine.DataRecorder:
 	level
 	deaths
 	kills
 	
+dk.itu.mario.scene.WinScene:
+	tick
+	
+dk.itu.mario.scene.LoseScene:
+	tick
 
 	
 	
